fix: adjust text tracking for improved readability in global styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -174,7 +174,7 @@
     @apply text-sm;
   }
   p {
-    @apply font-rubik text-sm text-mr-text-content font-normal tracking-wide leading-relaxed;
+    @apply font-rubik text-sm text-mr-text-content font-normal tracking-wider leading-relaxed;
   }
   a {
     @apply font-museo_moderno tracking-wider text-mr-text-headers;
@@ -183,7 +183,7 @@
     @apply font-rubik text-base border-l-2 pl-4 my-2 text-mr-text-relax;
   }
   li {
-    @apply font-rubik text-sm text-mr-text-content font-normal tracking-wide leading-relaxed mb-2;
+    @apply font-rubik text-sm text-mr-text-content font-normal tracking-wider leading-relaxed mb-2;
   }
 
   footer {
@@ -195,7 +195,7 @@
 @layer components {
   /* CUSTOM PROSE PLUGING */
   .custom-prose {
-    @apply prose prose-invert prose-headings:text-mr-text-headers prose-strong:text-mr-text-content prose-h1:text-2xl prose-h2:text-xl prose-h3:text-lg prose-h4:text-base prose-h5:text-sm prose-h6:text-xs;
+    @apply prose prose-invert prose-headings:text-mr-text-headers prose-strong:text-mr-text-content prose-h1:text-2xl prose-h2:text-xl prose-h2:mb-3 prose-h2:mt-9 prose-h3:text-lg prose-h3:mb-3 prose-h3:mt-9 prose-h4:text-base prose-h4:mb-3 prose-h4:mt-9 prose-h5:text-sm prose-h5:mb-3 prose-h5:mt-9 prose-h6:text-xs prose-h6:mb-3 prose-h6:mt-9 prose-p:mt-2 prose-p:mb-4;
   }
 
   /* CUSTOM BULLET LIST */
